Project

General

Profile

Actions

Bug #49392

closed

osd ok-to-stop too conservative

Added by Sage Weil about 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific, octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Currently 'osd ok-to-stop' is too conservative: if the pg is degraded, and is touched by an osd we might stop, it always says it is unsafe. Instead, it should take the avail_no_missing and min_size into consideration.


Related issues 3 (0 open3 closed)

Copied to RADOS - Backport #49531: nautilus: osd ok-to-stop too conservativeResolvedNathan CutlerActions
Copied to RADOS - Backport #49532: pacific: osd ok-to-stop too conservativeResolvedActions
Copied to RADOS - Backport #49533: octopus: osd ok-to-stop too conservativeResolvedKefu ChaiActions
Actions #1

Updated by David Zafman about 3 years ago

  • Backport set to pacific, octopus, nautilus
Actions #2

Updated by Sage Weil about 3 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49531: nautilus: osd ok-to-stop too conservative added
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49532: pacific: osd ok-to-stop too conservative added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49533: octopus: osd ok-to-stop too conservative added
Actions #6

Updated by Kefu Chai about 3 years ago

  • Backport changed from pacific, octopus, nautilus to pacific, nautilus
Actions #7

Updated by David Zafman about 3 years ago

  • Pull request ID set to 39455
Actions #8

Updated by Loïc Dachary about 3 years ago

  • Backport changed from pacific, nautilus to pacific, octopus, nautilus
Actions #9

Updated by Loïc Dachary about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF